--- a/research/Icyp_Algorithm.ipynb
+++ b/research/Icyp_Algorithm.ipynb
@@ -230,7 +230,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-5-83d2b7e3be54>:9: SettingWithCopyWarning: \n",
+      "<ipython-input-5-f8af1d1b1b22>:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -249,7 +249,7 @@
     "for column in ['state_name', 'district_name', 'season', 'crop']:\n",
     "    categorical_convert = LabelEncoder()\n",
     "    X_train[column] = categorical_convert.fit_transform(X_train[column])\n",
-    "    encoders[column] = X_train[column]"
+    "    encoders[column] = categorical_convert"
    ]
   },
   {
