--- a/research/Icyp_Algorithm.ipynb
+++ b/research/Icyp_Algorithm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
        "4         71.463          857.558      9664.0  0.667        Good  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
     "df = pd.read_csv('https://raw.githubusercontent.com/SRaiz/Krishi-Karma/master/Final_Crop_Yield_Karnataka.csv', \n",
     "                 skipinitialspace=True)\n",
     "\n",
-    "x_cols = [col for col in df.columns if ((col != 'yield_class') & (col != 'key'))]\n",
+    "x_cols = [col for col in df.columns if ((col != 'yield_class') & (col != 'key') & (col != 'yield'))]\n",
     "\n",
     "# Set the input data(matrix) and the target column\n",
     "X = df[x_cols]\n",
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,14 +205,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'state_name': 'Karnataka', 'district_name': 'Davangere', 'crop_year': 2002.0, 'season': 'Kharif', 'crop': 'Maize', 'area': 2.0, 'min_rainfall': 0.0, 'max_rainfall': 0.0, 'mean_rainfall': 0.0, 'annual_rainfall': 0.0, 'production': 2.0, 'yield': 1.0}\n"
+      "{'state_name': 'Karnataka', 'district_name': 'Davangere', 'crop_year': 2002.0, 'season': 'Kharif', 'crop': 'Maize', 'area': 2.0, 'min_rainfall': 0.0, 'max_rainfall': 0.0, 'mean_rainfall': 0.0, 'annual_rainfall': 0.0, 'production': 2.0}\n"
      ]
     }
    ],
@@ -223,14 +223,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-20-f8af1d1b1b22>:9: SettingWithCopyWarning: \n",
+      "<ipython-input-5-f8af1d1b1b22>:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
        "['./extra_trees.joblib']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
